--- a/app/pug/layouts/vacancy/row.pug
+++ b/app/pug/layouts/vacancy/row.pug
@@ -33,7 +33,122 @@
 						|Гурківський Олександр
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
+						p.status.choosen.active
+							|Подготовка CV
 						p.status.choosen
+							|CV отправлено
+						p.status.ready
+							|Утвержден
+						p.status.ready
+							|Контракт подписан
+						p.status.wait
+							|Подан в визовый центр
+						p.status.department
+							|Получил разрешение
+						p.status.department
+							|Забрал разрешение
+						p.status.department
+							|Билеты куплены
+						p.status.busy
+							|Трудоустроен
+					.cell-statu__right
+				.table-full__cell.row__cell.cell-exp
+					i.label.hot__label
+						|Сезонная
+					p
+						|Цветы
+				.table-full__cell.row__cell.cell-notes
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Лемешко Аліна
+				.table-full__cell.row__cell.cell-status
+				.table-full__cell.row__cell.cell-exp
+					i.label.green__label
+						|Практика
+					p
+						|Поля
+				.table-full__cell.row__cell.cell-notes
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Романов Валентин
+				.table-full__cell.row__cell.cell-status
+				.table-full__cell.row__cell.cell-exp
+				.table-full__cell.row__cell.cell-notes
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Тарасюк Віталій
+				.table-full__cell.row__cell.cell-status
+				.table-full__cell.row__cell.cell-exp
+					i.label.blue__label
+						|Рабочая
+					p
+						|Коровы
+				.table-full__cell.row__cell.cell-notes
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Бичківська Алла
+				.table-full__cell.row__cell.cell-status
+				.table-full__cell.row__cell.cell-exp
+					i.label.green__label
+						|Д2
+					p
+						|Агроном
+					i.label.dirty-green__label
+						|ВСТ
+				.table-full__cell.row__cell.cell-notes
+		.table-full__ready
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Червінський Йосип
+				.table-full__cell.row__cell.cell-status
+					.cell-status__left
+						p.status.choosen
+							|Подготовка CV
+						p.status.choosen
+							|CV отправлено
+						p.status.ready
+							|Утвержден
+						p.status.ready
+							|Контракт подписан
+						p.status.wait
+							|Подан в визовый центр
+						p.status.department
+							|Получил разрешение
+						p.status.department
+							|Забрал разрешение
+						p.status.department
+							|Билеты куплены
+						p.status.busy
+							|Трудоустроен
+					.cell-statu__right
+				.table-full__cell.row__cell.cell-exp
+				.table-full__cell.row__cell.cell-notes
+					p
+						|Записан в посольство на 10.05
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Шащук Іван
+				.table-full__cell.row__cell.cell-status
+				.table-full__cell.row__cell.cell-exp
+					i.label.green__label
+						|Практика
+					p
+						|Поля
+				.table-full__cell.row__cell.cell-notes
+		.table-full__wait
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Іванчик Олександр
+				.table-full__cell.row__cell.cell-status
+					.cell-status__left
+						p.status.choosen.active
 							|Подготовка CV
 						p.status.choosen
 							|CV отправлено
@@ -57,36 +172,113 @@
 			.table-full__row.f-container
 				.table-full__cell.row__cell.cell-names
 					p
-						|Лемешко Аліна
+						|Волтарніст Юлія
 				.table-full__cell.row__cell.cell-status
+					.cell-status__left
+						p.status.choosen.active
+							|Подготовка CV
+						p.status.choosen
+							|CV отправлено
+						p.status.ready
+							|Утвержден
+						p.status.ready
+							|Контракт подписан
+						p.status.wait
+							|Подан в визовый центр
+						p.status.department
+							|Получил разрешение
+						p.status.department
+							|Забрал разрешение
+						p.status.department
+							|Билеты куплены
+						p.status.busy
+							|Трудоустроен
+					.cell-statu__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
 			.table-full__row.f-container
 				.table-full__cell.row__cell.cell-names
 					p
-						|Романов Валентин
+						|Ситнік Оксана
 				.table-full__cell.row__cell.cell-status
+					.cell-status__left
+						p.status.choosen.active
+							|Подготовка CV
+						p.status.choosen
+							|CV отправлено
+						p.status.ready
+							|Утвержден
+						p.status.ready
+							|Контракт подписан
+						p.status.wait
+							|Подан в визовый центр
+						p.status.department
+							|Получил разрешение
+						p.status.department
+							|Забрал разрешение
+						p.status.department
+							|Билеты куплены
+						p.status.busy
+							|Трудоустроен
+					.cell-statu__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
-			.table-full__row.f-container
-				.table-full__cell.row__cell.cell-names
-					p
-						|Тарасюк Віталій
-				.table-full__cell.row__cell.cell-status
-				.table-full__cell.row__cell.cell-exp
-				.table-full__cell.row__cell.cell-notes
-			.table-full__row.f-container
-				.table-full__cell.row__cell.cell-names
-					p
-						|Бичківська Алла
-				.table-full__cell.row__cell.cell-status
-				.table-full__cell.row__cell.cell-exp
-				.table-full__cell.row__cell.cell-notes
-		.table-full__ready
-		.table-full__wait
 		.table-full__department
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Коргун Максим
+				.table-full__cell.row__cell.cell-status
+					.cell-status__left
+						p.status.choosen.active
+							|Подготовка CV
+						p.status.choosen
+							|CV отправлено
+						p.status.ready
+							|Утвержден
+						p.status.ready
+							|Контракт подписан
+						p.status.wait
+							|Подан в визовый центр
+						p.status.department
+							|Получил разрешение
+						p.status.department
+							|Забрал разрешение
+						p.status.department
+							|Билеты куплены
+						p.status.busy
+							|Трудоустроен
+					.cell-statu__right
+				.table-full__cell.row__cell.cell-exp
+				.table-full__cell.row__cell.cell-notes
 		.table-full__busy
-
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Конончук Віталій
+				.table-full__cell.row__cell.cell-status
+					.cell-status__left
+						p.status.choosen.active
+							|Подготовка CV
+						p.status.choosen
+							|CV отправлено
+						p.status.ready
+							|Утвержден
+						p.status.ready
+							|Контракт подписан
+						p.status.wait
+							|Подан в визовый центр
+						p.status.department
+							|Получил разрешение
+						p.status.department
+							|Забрал разрешение
+						p.status.department
+							|Билеты куплены
+						p.status.busy
+							|Трудоустроен
+					.cell-statu__right
+				.table-full__cell.row__cell.cell-exp
+				.table-full__cell.row__cell.cell-notes
 .row(data-custom-open="modal-1")
 	.f-container
 		.row__terms.row__cell.medium
