--- a/app/pug/layouts/vacancy/sidebar.pug
+++ b/app/pug/layouts/vacancy/sidebar.pug
@@ -7,7 +7,7 @@
 				|Василий
 		.sidebar__lists
 			ul.sidebar__list
-				li.sidebar__list-item.sidebar__li
+				li.sidebar__list-item.sidebar__li.active
 					p
 						|Вакансии
 					span.sidebar__list-add
@@ -19,7 +19,7 @@
 					span.sidebar__list-add
 						span
 						span
-				li.sidebar__list-item.active.sidebar__li
+				li.sidebar__list-item.sidebar__li
 					p 
 						|Работодатели
 					span.sidebar__list-add
@@ -70,7 +70,7 @@
 							|Менеджер
 						span.sidebar__filter-remove
 				li.sidebar__filter-item.sidebar__li
-					.sidebar__filter-wrapper.intermediaries-filter-wrapper
+					.sidebar__filter-wrapper.stages-vacancies-filter-wrapper
 						p
 							|Этапы вакансий
 						span.sidebar__filter-remove
@@ -78,7 +78,7 @@
 			.sidebar__stats-top
 				ul.sidebar__stat
 					li.sidebar__stat-item.sidebar__li
-						.sidebar__stats-wrapper.sorting-stats-wrapper
+						.sidebar__stats-wrapper.selecting-stats-wrapper
 							p
 								|Сотрировка
 							span.sidebar__filter-remove
