--- a/app/vacancy.pug
+++ b/app/vacancy.pug
@@ -30,6 +30,14 @@ block head-end
 
 block content
 	main.main
+		.grid
+			.side-column
+			.columns
+				.grid-column.first-column
+				.grid-column.second-column
+				.grid-column.third-column
+				.grid-column.fourth-column
+				.grid-column.fifth-column
 		.sidebar
 			include pug/layouts/vacancy/sidebar
 		.rows
