--- a/app/less/_row.less
+++ b/app/less/_row.less
@@ -2,7 +2,7 @@
 	cursor: pointer;
 	width: 100%;
 	// height: 44px;
-
+	background: @white;
 	&:nth-child(even) {
 		background: @light-blue;
 			&:hover {
@@ -40,8 +40,9 @@
 	 	
 	 span, p, a {
 	 text-overflow: ellipsis;
-	 overflow: hidden;
+	 overflow-x: hidden;
 	 white-space: nowrap;
+	 line-height: 17/14;
 
 	 }
 	
