--- a/app/index.pug
+++ b/app/index.pug
@@ -32,7 +32,7 @@ block content
 	main.main
 		.sidebar
 			include pug/layouts/sidebar
-		.rows
+		.rows.worker-rows
 			include pug/layouts/row
 			include pug/layouts/row
 			include pug/layouts/row
