--- a/app/vacancy.pug
+++ b/app/vacancy.pug
@@ -30,17 +30,18 @@ block head-end
 
 block content
 	main.main
-		.grid
-			.side-column
-			.columns
-				.grid-column.first-column
-				.grid-column.second-column
-				.grid-column.third-column
-				.grid-column.fourth-column
-				.grid-column.fifth-column
+		
 		.sidebar
 			include pug/layouts/vacancy/sidebar
-		.rows
+		.rows.vacancy-rows
+			.grid
+				//- .side-column
+				.columns
+					.grid-column.first-column
+					.grid-column.second-column
+					.grid-column.third-column
+					.grid-column.fourth-column
+					.grid-column.fifth-column
 			include pug/layouts/vacancy/row
 			include pug/layouts/vacancy/row
 			include pug/layouts/vacancy/row
